mutants.out/log/replace_______into_program_mode_with_Default__default()_in_src_lib.rs_82.log

*** replace <??>::into_program_mode with Default::default() in src/lib.rs:82
*** --- src/lib.rs
+++ replace <??>::into_program_mode with Default::default()
@@ -75,26 +75,18 @@
 
         //let _parameters = ebyte.read_parameters()?;
         //let ebyte = ebyte.into_normal_mode();
 
         Ok(ebyte)
     }
 
     pub fn into_program_mode(mut self) -> Ebyte<S, Aux, M0, M1, D, Program> {
-        Program::set_pins(&mut self.aux, &mut self.m0, &mut self.m1, &mut self.delay);
-        Ebyte {
-            serial: self.serial,
-            aux: self.aux,
-            m0: self.m0,
-            m1: self.m1,
-            delay: self.delay,
-            mode: PhantomData::<Program>,
-        }
-    }
+Default::default() /* ~ changed by cargo-mutants ~ */
+}
 
     /// Write entire buffer to serial port
     pub fn write_buffer(&mut self, buffer: &[u8]) -> Result<(), crate::Error> {
         for ch in buffer {
             block!(self.serial.write(*ch)).map_err(|_| Error::SerialWrite)?;
         }
         Ok(())
     }

*** run /home/rafaelbachmann/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo check --tests
*** cargo result: Exited(101) in 0.283sW8Sm9N)
error[E0277]: the trait bound `Ebyte<S, Aux, M0, M1, D, mode::Program>: std::default::Default` is not satisfied
  --> src/lib.rs:83:1
   |
83 | Default::default() /* ~ changed by cargo-mutants ~ */
   | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `Ebyte<S, Aux, M0, M1, D, mode::Program>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `ebyte-e32` due to previous error
